apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'maven'
apply plugin: 'application'

repositories {
    mavenCentral()
    mavenLocal()
    flatDir {
        dirs 'lib'
    }
}

ext {
    junitVersion   = "4.12"
    jettyVersion = "9.3.0.M2"

    libraries = [
        junit: "junit:junit:${junitVersion}",
    ]
}

dependencies {
    // use changing:true while developing against a snapshot
    compile group:"com.epages", name:"epagesj-epagesj-server-base", version:"7.0.0-SNAPSHOT", changing: true
    compile group:"com.epages", name:"epagesj-aspooldbcache", version:"7.0.0-SNAPSHOT", changing: true
    compile "org.eclipse.jetty.fcgi:fcgi-server:${jettyVersion}"
    compile "org.eclipse.jetty:jetty-servlets:${jettyVersion}"
    compile "org.eclipse.jetty.http2:http2-server:${jettyVersion}"
    compile "org.eclipse.jetty:jetty-alpn-server:${jettyVersion}"
    // TODO: auto-copy alpn boot into lib.
    compile 'org.mortbay.jetty.alpn:alpn-boot:8.1.3.v20150130'

    testCompile "junit:junit:${junitVersion}"
}

sourceCompatibility = 1.8
version = '1.0'
mainClassName = "fcgi.FastCGIStart"

applicationDefaultJvmArgs = [
	"-Dlogback.configurationFile=conf/logback-fcgi.xml",
	"-DFastCGIServer.requestLoggerEnabled=true",
	"-DEPAGESJ_CONFIG=conf/",
    "-XX:+PrintCommandLineFlags",
    "-XX:+UseG1GC",
    "-XX:+PrintGCDetails",
    "-XX:+PrintGCDateStamps",
    "-Xloggc:logs/fcgi_gc.log",
    "-Dfile.encoding=UTF-8",
    "-Xbootclasspath/p:lib/alpn-boot-8.1.3.v20150130.jar"
]

jar {
    manifest.attributes('Main-Class': mainClassName)
}

task assembleManifestClasspath {
    doLast {
        jar {
            manifest.attributes("Class-Path": configurations.runtime.collect { "../lib/${it.name}" }.join(' '))
        }
    }
}

jar.dependsOn assembleManifestClasspath

applicationDistribution.into('conf') {
    from(project.file('conf'))
}
